prevent long press on mobile

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -21,6 +21,7 @@ body {
   height: 100%;
   font-family: 'Work Sans';
   font-weight: 600;
+  overflow: hidden;
 }
 
 input[type='range']::-webkit-slider-thumb {
@@ -30,4 +31,10 @@ input[type='range']::-webkit-slider-thumb {
   height: 17px;
   background: black;
   border-radius: 50%;
+}
+
+*:not(input):not(textarea) {
+  user-select: none; /* disable selection/Copy of UIWebView */
+  -webkit-user-select: none; /* disable selection/Copy of UIWebView */
+  -webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */
 }
